--- a/ishare-ui/src/main/res/drawable/round16.xml
+++ b/ishare-ui/src/main/res/drawable/round16.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  * Copyright 2023 The IShare Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,6 +15,8 @@
 -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="16dp" />
-    <solid android:color="@android:color/holo_red_dark" />
+    <corners
+        android:topLeftRadius="16dp"
+        android:topRightRadius="16dp" />
+    <solid android:color="@android:color/white" />
 </shape>
