--- a/ishare-ui/src/main/res/layout/layout_dialog_share.xml
+++ b/ishare-ui/src/main/res/layout/layout_dialog_share.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
  * Copyright 2023 The IShare Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,20 +17,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:background="@drawable/round16"
-    android:layout_height="wrap_content">
+    android:paddingVertical="16dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/share_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:spanCount="4"
         tools:itemCount="11"
-        tools:listitem="@layout/layout_share_item" />
+        tools:layoutManager=".DisableScrollLinearLayoutManager"
+        tools:listitem="@layout/layout_share_item"
+        tools:spanCount="4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
