--- a/ishare-ui/src/main/res/layout/layout_share_item.xml
+++ b/ishare-ui/src/main/res/layout/layout_share_item.xml
@@ -20,6 +20,8 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
+    android:layout_marginBottom="6dp"
+
     android:orientation="vertical">
 
     <ImageView
@@ -30,8 +32,12 @@
 
     <TextView
         android:id="@+id/title"
+        android:layout_marginTop="4dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="12sp"
+        android:includeFontPadding="true"
         tools:text="朋友圈" />
 
 </LinearLayout>
